# stm32-based-on-keil

./: README.md
H7a3_GC9A01/: .mxproject  H7a3.ioc
H7a3_GC9A01/Core/Inc/: main.h
H7a3_GC9A01/Core/Src/: gpio.c  main.c  spi.c
H7a3_GC9A01/GC9A01/: lcd.c  lcd.h  lcd_init.c  lcd_init.h  lcdfont.h  pic.h
H7a3_GC9A01/MDK-ARM/: .clangd  H7a3+H7a3.cbuild.yml  H7a3+H7a3.cprj  H7a3.cbuild-idx.yml  H7a3.cproject.yaml  H7a3.csolution.yaml  H7a3.uvguix.Mr.zhou  H7a3.uvoptx  H7a3.uvprojx  H7a3_H7a3.sct  startup_stm32h7a3xxq.lst
H7a3_GC9A01/MDK-ARM/H7a3/: H7a3.axf  H7a3.build_log.htm  H7a3.htm  H7a3.lnp  H7a3_H7a3.dep  gpio.crf  main.crf  stm32h7xx_hal_cortex.crf  stm32h7xx_hal_flash.crf  stm32h7xx_hal_msp.crf  stm32h7xx_hal_rcc.crf  stm32h7xx_hal_rcc_ex.crf  stm32h7xx_hal_tim.crf  stm32h7xx_hal_tim_ex.crf  stm32h7xx_hal_uart.crf  stm32h7xx_hal_uart_ex.crf  stm32h7xx_it.crf  usart.crf  usb_otg.crf
H7a3_GC9A01/MDK-ARM/RTE/_H7a3/: RTE_Components.h
H7a3_GC9A01/MDK-ARM/tmp/H7a3/H7a3/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  compile_commands.json
